WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
17946
[GTK] Widgets are not clipped
https://bugs.webkit.org/show_bug.cgi?id=17946
Summary
[GTK] Widgets are not clipped
Marco Barisione
Reported
2008-03-19 05:56:02 PDT
Widget are not clipped, so they may be painted outside the allowed region. This is visible when you are using an iframe containing widgets.
Attachments
Pass the clipping region to moz_gtk_widget_paint()
(2.19 KB, patch)
2008-03-19 06:04 PDT
,
Marco Barisione
alp
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Marco Barisione
Comment 1
2008-03-19 06:04:58 PDT
Created
attachment 19883
[details]
Pass the clipping region to moz_gtk_widget_paint()
Alp Toker
Comment 2
2008-03-20 14:04:24 PDT
Landed in
r31185
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug