2008-03-20  Marco Barisione  <marco.barisione@collabora.co.uk>

Reviewed by Alp Toker.

        http://bugs.webkit.org/show_bug.cgi?id=17946
        [GTK] Widgets are not clipped

        * platform/gtk/RenderThemeGtk.cpp:
        (WebCore::paintMozWidget): pass the clipping rectangle to
        moz_gtk_widget_paint() instead of just the widget rectangle.


Canonical link: https://commits.webkit.org/24864@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@31185 268f45cc-cd09-0410-ab3c-d52691b4dbfc